[package]
name = "halloweengame"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.27.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
